feat: backend for Chapter Creator

--- a/src/i18n/locale/de.yaml
+++ b/src/i18n/locale/de.yaml
@@ -56,3 +56,6 @@ plugin:
   edl:
     enable: EDL Unterstützung
     created: Edl Datei wurde erstellt
+  chapter:
+    enable: Kapitelersteller
+    created: Kapiteldatei erstellt
