feat: Support alternate provider IDs

--- a/src/i18n/locale/de.yaml
+++ b/src/i18n/locale/de.yaml
@@ -52,6 +52,9 @@ validation:
   StartEnd: Start liegt immer vor dem Ende
 close: Schließen
 back: Zurück
+provider:
+  chapter: Chapter Segments
+  skipper: Intro Skipper
 plugin:
   edl:
     enable: EDL Unterstützung
