feat: Add more provider selections

--- a/src/i18n/locale/en-US.yaml
+++ b/src/i18n/locale/en-US.yaml
@@ -52,7 +52,8 @@ validation:
 close: Close
 back: Back
 provider:
-  title: Alternate Provider ID
+  title: Provider ID (Name)
+  default: MediaSegments API
   skipper: Intro Skipper
   chapter: Chapter Segments
 plugin:
