--- a/src/i18n/locale/de.yaml
+++ b/src/i18n/locale/de.yaml
@@ -53,8 +53,9 @@ validation:
 close: Schließen
 back: Zurück
 provider:
-  chapter: Chapter Segments
+  default: MediaSegments API
   skipper: Intro Skipper
+  chapter: Chapter Segments
 plugin:
   edl:
     enable: EDL Unterstützung
