Revert "Remove MediaSegments API"
Moves MediaSegments API to the bottom for backward compatibility with 10.10

--- a/src/i18n/locale/de.yaml
+++ b/src/i18n/locale/de.yaml
@@ -55,6 +55,7 @@ back: Zurück
 provider:
   skipper: Intro Skipper
   chapter: Chapter Segments
+  segment: MediaSegments API
 plugin:
   edl:
     enable: EDL Unterstützung
