--- a/src/i18n/locale/fr.yaml
+++ b/src/i18n/locale/fr.yaml
@@ -55,6 +55,7 @@ back: Retour
 provider:
   skipper: Intro Skipper
   chapter: Chapter Segments
+  segment: MediaSegments API
 plugin:
   edl:
     enable: EDL Soutien
